...
              style: BaseTextStyle.heading2(fontSize: 20),
            ),
            const SizedBox(height: 20),
            Form(
              key: controller.formKey,
              child: TextFormField(
                key: const Key("password_login_password_field"),
                controller: controller.passwordController,
                validator: (value) => controller.passwordValidator(value!),
                obscureText: true,
                decoration:
                    const InputDecoration(hintText: 'Enter your password'),
              ),
...
        ),
      ),
      bottomNavigationBar: SafeArea(
        child: Padding(
          padding: const EdgeInsets.symmetric(horizontal: 15, vertical: 20),
          child: ElevatedButton(
              key: const Key("password_login_login_btn"),
              onPressed: () async {
                if (controller.validateAndSave()) {
                  await controller.login();
                }
              },
              style: ElevatedButton.styleFrom(
...
