...
          padding: const EdgeInsets.symmetric(horizontal: 15, vertical: 20),
          child: Row(
            children: [
              Expanded(
                flex: 1,
                child: ElevatedButton(
                  key: const Key("request_view_cancel_request"),
                  onPressed: () {
                    controller.handleUnaccept();
                  },
                  style:
                      ElevatedButton.styleFrom(backgroundColor: Colors.white),
                  child: Padding(
...
              const SizedBox(
                width: 5,
              ),
              Expanded(
                flex: 3,
                child: ElevatedButton(
                  key: const Key("request_view_accept_request"),
                  onPressed: () async {
                    await controller.handleAccept();
                  },
                  style:
                      ElevatedButton.styleFrom(backgroundColor: Colors.green),
                  child: Padding(
...
